[package]
name = "iss_location"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = { version = "1.0.107", features = [] }
serde_derive = { version = "1.0.188", features = [] }
error-chain = { version = "0.12.4", features = [] }
serde = "1.0.188"
chrono = "0.4.31"

